rust/crates/pyxis-cli/tests/snapshots/test_output__test_output-json.snap
---
source: crates/pyxis-cli/tests/test_output.rs
expression: "String::from_utf8_lossy(cmd.get_output().stdout.as_slice())"
---
{
  "name": "",
  "record": [
    {
      "idx": 0,
      "method": "input",
      "output_x": 4760096.421921,
      "output_x_name": "x",
      "output_y": 3744293.729449,
      "output_y_name": "y",
      "output_z": 0.0,
      "output_z_name": "z",
      "parameter": {}
    }
  ]
}
