rust/crates/pyxis-cli/tests/snapshots/test_output__test_output-verbose.snap
---
source: crates/pyxis-cli/tests/test_output.rs
expression: "String::from_utf8_lossy(cmd.get_output().stdout.as_slice())"
---
=================
Transform Records
=================
x: 4760096.421921, y: 3744293.729449, z: 0
